<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>min_snap_traj_integration_test</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="szolc@agh.edu.pl">developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>min_snap_traj</test_depend>
  <test_depend>min_snap_traj_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>